fixed several UX/UI stuff, first marginleft for card and content looked awful on mobile site so set those to 0 on mobile breakpoint, and also of course, sidebar position was not fixed so whenever user filled all his screen with different coins, sidebar would stay up when scrolling down, set to fixed and made content not overlap on sidebar with margin, and to ignore that margin with the sidebar toggle button, so looks the same but works different now on CSS, sidebar content now is fixed to the side, mobile looking nice too without crazy left or right margin, next step is removing ugly jQuery CDN or Auth implementation

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,17 @@ a, a:hover, a:focus {
     min-height: 100vh;
     background: #2C2C38;
     color: #fff;
-    transition: all 0.3s;   
+    transition: all 0.3s;
+    position: fixed;   
+}
+
+#content {
+    transition: all 0.3s;
+    margin-left: 16.63rem;
+}
+
+.margin-content {
+    margin-left: 0 !important;
 }
 
 #sidebar.active {
@@ -183,17 +193,16 @@ ul ul a {
     .footer {
         display: flex;
     }
-    /* #navAdd {
-        display: inline-block;
-        bottom: 2rem;
-        right: 15rem;
+    .card {
+        margin-right: 0 !important;
+        margin-left: 0 !important;
     }
-    #navRem{
-        bottom: 2rem;
-        right: 5.8rem;
+    #content {
+        margin-left: 0 !important;
+        padding-bottom: 18%;
     }
-    #navEdit{
-        
-    } */
+    .Input-label {
+        display: none;
+    }
 }
 
